--- a/HRManagement/nbproject/private/private.properties
+++ b/HRManagement/nbproject/private/private.properties
@@ -1,10 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\haonshe176595_FPT\\Fall2023\\PRJ301\\Tools-PRJ301\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\haonshe176595_FPT\\Fall2023\\PRJ301\\Tools-PRJ301\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.mysql-connector-j-8.2.0.jar=D:\\haonshe176595_FPT\\Fall2023\\PRJ301\\Tools-PRJ301\\lib\\mysql-connector-j-8.2.0.jar
+deploy.ant.properties.file=C:\\Users\\Dan\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
+selected.browser=Chrome
+user.properties.file=C:\\Users\\Dan\\AppData\\Roaming\\NetBeans\\17\\build.properties
