--- a/HRManagement/nbproject/project.properties
+++ b/HRManagement/nbproject/project.properties
@@ -27,9 +27,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=E:\\FPTU\\KI4\\PRJ301\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=E:\\FPTU\\KI4\\PRJ301\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.mysql-connector-j-8.2.0.jar=E:\\FPTU\\KI4\\PRJ301\\lib\\mysql-connector-j-8.2.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=C:\\FPT\\PRJ301\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=C:\\FPT\\PRJ301\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Users\\ThuyVy\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,9 +39,9 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.mysql-connector-j-8.2.0.jar}
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
