--- a/HRManagement/nbproject/project.properties
+++ b/HRManagement/nbproject/project.properties
@@ -29,9 +29,9 @@ endorsed.classpath=
 excludes=
 
 
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=../../jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=../../jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\cuong\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.mysql-connector-j-8.2.0.jar=lib/mysql-connector-j-8.2.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,9 +41,9 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.2.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
