--- a/HRManagement/nbproject/private/private.properties
+++ b/HRManagement/nbproject/private/private.properties
@@ -7,6 +7,6 @@ javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\andep\\AppData\\Roaming\\NetBeans\\17\\build.properties
 
 
