--- a/HRManagement/nbproject/private/private.properties
+++ b/HRManagement/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 
-deploy.ant.properties.file=C:\\Users\\Dan\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+deploy.ant.properties.file=C:\\Users\\ThuyVy\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
 
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
@@ -7,6 +7,6 @@ javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
 
-user.properties.file=C:\\Users\\Dan\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\ThuyVy\\AppData\\Roaming\\NetBeans\\17\\build.properties
 
 
