--- a/HRManagement/nbproject/private/private.properties
+++ b/HRManagement/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 
 
-deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+deploy.ant.properties.file=C:\\Users\\cuong\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
 
 
 
@@ -11,7 +11,7 @@ javadoc.preview=true
 selected.browser=Chrome
 
 
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\cuong\\AppData\\Roaming\\NetBeans\\17\\build.properties
 
 
 
