--- a/HRManagement/nbproject/private/private.properties
+++ b/HRManagement/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 
 
 
-deploy.ant.properties.file=C:\\Users\\Dan\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+deploy.ant.properties.file=C:\\Users\\andep\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
 
 
 
@@ -14,7 +14,7 @@ selected.browser=Chrome
 
 
 
-user.properties.file=C:\\Users\\Dan\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\andep\\AppData\\Roaming\\NetBeans\\17\\build.properties
 
 
 
