--- a/HRManagement/nbproject/project.properties
+++ b/HRManagement/nbproject/project.properties
@@ -29,9 +29,19 @@ endorsed.classpath=
 excludes=
 
 
+file.reference.commons-codec-1.11.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\commons-codec-1.11.jar
+file.reference.commons-collections4-4.2.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\commons-collections4-4.2.jar
+file.reference.commons-compress-1.18.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\commons-compress-1.18.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail-api-1.6.2-javadoc.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\javax.mail-api-1.6.2-javadoc.jar
+file.reference.javax.mail-api-1.6.2-sources.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\javax.mail-api-1.6.2-sources.jar
+file.reference.javax.mail-api-1.6.2.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\javax.mail-api-1.6.2.jar
 file.reference.mysql-connector-j-8.2.0.jar=lib/mysql-connector-j-8.2.0.jar
+file.reference.poi-4.0.1.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\poi-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\poi-ooxml-schemas-4.0.1.jar
+file.reference.xmlbeans-3.0.2.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\xmlbeans-3.0.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +53,17 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.mysql-connector-j-8.2.0.jar}
+    ${file.reference.mysql-connector-j-8.2.0.jar}:\
+    ${file.reference.poi-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
+    ${file.reference.xmlbeans-3.0.2.jar}:\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-collections4-4.2.jar}:\
+    ${file.reference.commons-compress-1.18.jar}:\
+    ${file.reference.javax.mail-api-1.6.2-javadoc.jar}:\
+    ${file.reference.javax.mail-api-1.6.2-sources.jar}:\
+    ${file.reference.javax.mail-api-1.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
