--- a/HRManagement/nbproject/project.properties
+++ b/HRManagement/nbproject/project.properties
@@ -29,19 +29,19 @@ endorsed.classpath=
 excludes=
 
 
-file.reference.commons-codec-1.11.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\commons-codec-1.11.jar
-file.reference.commons-collections4-4.2.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\commons-collections4-4.2.jar
-file.reference.commons-compress-1.18.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\commons-compress-1.18.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail-api-1.6.2-javadoc.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\javax.mail-api-1.6.2-javadoc.jar
-file.reference.javax.mail-api-1.6.2-sources.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\javax.mail-api-1.6.2-sources.jar
-file.reference.javax.mail-api-1.6.2.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\javax.mail-api-1.6.2.jar
-file.reference.mysql-connector-j-8.2.0.jar=lib/mysql-connector-j-8.2.0.jar
-file.reference.poi-4.0.1.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\poi-4.0.1.jar
-file.reference.poi-ooxml-4.0.1.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\poi-ooxml-4.0.1.jar
-file.reference.poi-ooxml-schemas-4.0.1.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\poi-ooxml-schemas-4.0.1.jar
-file.reference.xmlbeans-3.0.2.jar=C:\\FPT\\PRJ301\\MyLiberary\\MyLiberary\\xmlbeans-3.0.2.jar
+file.reference.commons-codec-1.11.jar=D:\\IT3\\AttendanceSWP391\\HRManagement\\lib\\commons-codec-1.11.jar
+file.reference.commons-collections4-4.2.jar=D:\\IT3\\AttendanceSWP391\\HRManagement\\lib\\commons-collections4-4.2.jar
+file.reference.commons-compress-1.18.jar=D:\\IT3\\AttendanceSWP391\\HRManagement\\lib\\commons-compress-1.18.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\IT3\\AttendanceSWP391\\HRManagement\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\IT3\\AttendanceSWP391\\HRManagement\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail-api-1.6.2-javadoc.jar=D:\\IT3\\AttendanceSWP391\\HRManagement\\lib\\javax.mail-api-1.6.2-javadoc.jar
+file.reference.javax.mail-api-1.6.2-sources.jar=D:\\IT3\\AttendanceSWP391\\HRManagement\\lib\\javax.mail-api-1.6.2-sources.jar
+file.reference.javax.mail-api-1.6.2.jar=D:\\IT3\\AttendanceSWP391\\HRManagement\\lib\\javax.mail-api-1.6.2.jar
+file.reference.mysql-connector-j-8.2.0.jar=D:\\IT3\\AttendanceSWP391\\HRManagement\\lib\\mysql-connector-j-8.2.0.jar
+file.reference.poi-4.0.1.jar=D:\\IT3\\AttendanceSWP391\\HRManagement\\lib\\poi-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar=D:\\IT3\\AttendanceSWP391\\HRManagement\\lib\\poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar=D:\\IT3\\AttendanceSWP391\\HRManagement\\lib\\poi-ooxml-schemas-4.0.1.jar
+file.reference.xmlbeans-3.0.2.jar=D:\\IT3\\AttendanceSWP391\\HRManagement\\lib\\xmlbeans-3.0.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -51,19 +51,19 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-collections4-4.2.jar}:\
+    ${file.reference.commons-compress-1.18.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
+    ${file.reference.javax.mail-api-1.6.2-javadoc.jar}:\
+    ${file.reference.javax.mail-api-1.6.2-sources.jar}:\
+    ${file.reference.javax.mail-api-1.6.2.jar}:\
     ${file.reference.mysql-connector-j-8.2.0.jar}:\
     ${file.reference.poi-4.0.1.jar}:\
     ${file.reference.poi-ooxml-4.0.1.jar}:\
     ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
-    ${file.reference.xmlbeans-3.0.2.jar}:\
-    ${file.reference.commons-codec-1.11.jar}:\
-    ${file.reference.commons-collections4-4.2.jar}:\
-    ${file.reference.commons-compress-1.18.jar}:\
-    ${file.reference.javax.mail-api-1.6.2-javadoc.jar}:\
-    ${file.reference.javax.mail-api-1.6.2-sources.jar}:\
-    ${file.reference.javax.mail-api-1.6.2.jar}
+    ${file.reference.xmlbeans-3.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
